[package]
name = "bass-sys"
description = "Bass bindings for Rust"
version = "1.1.4"
authors = ["KernelError <villainkernelerror@gmail.com>"]
edition = "2018"
repository = "https://github.com/KernelErr0r/bass-sys"
license = "MIT"
keywords = ["bass", "bindings", "audio"]
categories = ["external-ffi-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
widestring = "0.4"