[package]
name = "bass-sys"
description = "Bass bindings for Rust"
version = "2.2.1"
authors = ["KernelError <villainkernelerror@gmail.com>"]
edition = "2018"
repository = "https://github.com/KernelErr0r/bass-sys"
license = "MIT"
keywords = ["bass", "bindings", "audio"]
categories = ["external-ffi-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
once_cell = "1.8.0"
